2006-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/itcomm.h: Included llr.h

2006-01-24  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/llr.h, itpp/comm/llr.cpp: Added new LLR algebra class

	* tests/llr_test.cpp, tests/llr_test.ref: Added test program for
	LLR class

	* itpp/comm/sources.mk, tests/Makefile.am: Updated accordingly
	
2006-01-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/schur_test.cpp, tests/schur_test.ref: Fixed the schur test
	program so now it should pass for different BLAS/LAPACK
	implementations

2006-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.cpp: Fixed bug [1412383]. The dec2bin()
	functions appended en extra zero in front of the bit vector. This
	wrong behaviour has been fixed. (merged from itpp-3-9-branch)

	* tests/matfunc_test.cpp: Added a check for LAPACK or MKL libraries,
	which are needed by the sqrtm() funciton

	* itpp/base/mat.cpp, itpp/base/mat.h, itpp/base/vec.cpp,
	itpp/base/vec.h: Fixed a problem with non existing specialisation
	of the `operator*' and `dot' function when linking without CBLAS

2006-01-22  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/converters.h: Removed strange `#if 0 ... #endif'
	statements

	* Makefile.am: Added itpp_msvc2003.* files to EXTRA_DIST variable

	* INSTALL, doc/local/installation.doc: Updated to reflect recent
	changes in configuration script
	* configure.ac, itpp/itconfig.h, itpp/base/itassert.cpp,
	itpp/base/itassert.h: Added `--enable-exceptions' switch to
	configure handling of exceptions

2006-01-22  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* Added module "protocol" to msvc project files

	* Some changes of protocol module for msvc compability

2006-01-22  Thomas Eriksson  <thomases2@users.sourceforge.net>

	* itpp_msvc2003.sln, itpp_msvc2003.vcproj: Added project files to
	keep MSVC.net 2003 compability 

2006-01-22  Adam Piatyszek  <ediap@users.sourceforge.net>
